samples/_failures_safe/1761343595_03e43b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df9b3b93.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_df9b3b93.c:162:9: error: expected expression at end of input
  162 |         case TOKEN_OPERATOR: return
      |         ^~~~
./samples/SAFE/__tmp_df9b3b93.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df9b3b93.c:162:9: error: expected declaration or statement at end of input
